--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - conda info -a
   - conda create -q -y -n test-environment python=3
   - source activate test-environment
+  - conda install -q -y -n test-environment jupyter pytest
   - pip install nbval
   - unset VIRTUAL_ENV
 script:
